--- a/Data/DataAccessComponent/DataAccessComponent.csproj
+++ b/Data/DataAccessComponent/DataAccessComponent.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;IDE0017;IDE0059;IDE0074;IDE0090;CA1416;</NoWarn>
+    <NoWarn>1701;1702;IDE0017;IDE0059;IDE0074;IDE0090;</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -21,7 +21,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DataJuggler.UltimateHelper" Version="9.1.0" />
+    <None Remove="DataGateway\Gateway.cs.backup" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DataJuggler.UltimateHelper" Version="9.0.2" />
   </ItemGroup>
 
   <ItemGroup>
